packages/@winglang/tree-sitter-wing/grammar.js
    source: ($) => repeat($._statement),
    block: ($) =>
      choice(braced(optional(repeat($._statement))), $.AUTOMATIC_BLOCK),
    _semicolon: ($) => choice(";", $.AUTOMATIC_SEMICOLON),
    reference: ($) =>
      choice(
        $.nested_identifier,
        $._reference_identifier,
        $.structured_access_expression
      ),

    identifier: ($) => /([A-Za-z_$][A-Za-z_$0-9]*|[A-Z][A-Z0-9_]*)/,
    _reference_identifier: ($) => alias($.identifier, $.reference_identifier),

    _statement: ($) =>
      choice(
        $.empty_statement,
        $.test_statement,
        $.import_statement,
        $.expression_statement,
        $.variable_definition_statement,
        $.variable_assignment_statement,
        $.return_statement,
        $.class_definition,
        $.interface_definition,
        $.for_in_loop,
        $.while_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.if_let_statement,
        $.struct_definition,
        $.enum_definition,
        $.try_catch_statement,
        $.super_constructor_statement,
        $.throw_statement,
        $.lift_statement
      ),

    lift_statement: ($) =>
      seq(
        "lift",
        field("lift_qualifications", $.lift_qualifications),
        field("block", $.block)
      ),

    lift_qualifications: ($) =>
      seq("{", field("qualification", commaSep1($.lift_qualification)), "}"),

    lift_qualification: ($) =>
      seq(
        field("obj", $.expression),
        ":",
        choice(
          field("ops", $.identifier),
          field("ops", seq("[", commaSep1($.identifier), "]"))
        )
      ),

    expression_statement: ($) => seq($.expression, $._semicolon),

    call: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("caller", choice($.expression, $.super_call)),
          field("args", $.argument_list)
        )
      ),

    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($.positional_argument, $.keyword_argument)),
        ")"
      ),
